--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xinyue Bi (毕馨月)"
-description              : "MSc in MBZUAI"
+description              : "Focusing on Explainable AI and Efficient Learning."
 repository               : "XinyueBi/aXinyueBi.github.io "
 google_scholar_stats_use_cdn : true
 
